--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,8 @@ textarea{
 
 .description{
   white-space: pre-wrap;
+  border: #000000;
+  
 }
 
 .time-block{
@@ -64,6 +66,7 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  align-items: center;
 }
 
 .saveBtn i:hover {
